app/assets/stylesheets/server/servers.scss
// Place all the styles related to the Servers controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/
.serverChatWrapper {
    position: fixed;
    height: 100%;
    width: 100%;

}

.serverBar {
    box-sizing: content-box;
    background-color: var(--background-primary);
    color: white;
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    padding: 12px 14px 0px 0px;
    width: 72px;
    display: flex;
    flex-flow: column;
    overflow-x: hidden;
    overflow-y: scroll;
}

.content {
    background-color: var(--background-tertiary);
    position: absolute;
    top: 0;
    right: 0;
    left: 72px;
    bottom: 0;
}

.channelList {
    background-color: var(--background-secondary);
    position: absolute;
    top: 0px;
    width: 240px;
    bottom: 0;
    display: flex;
    flex-flow: column;
    align-items: center;
}

.serverWithErrors {
    color: red;
}

.logoutButton {
    padding: 1px;
    text-align: center;
    color: black;
    font-weight: 700;
    background-color: var(--button-danger);
    width: inherit;
    position: relative;
    bottom: 0px;
    left: 0px;
}

.logoutButton:hover {
    background-color: var(--button-danger-hover);
    opacity: 0.8;
}

.serversList {
    // display: flex;
    // flex-flow: column;
    // align-content: center;
    // justify-content: center;
    // height: 100%;
}

.serverIndexItemBox {
    margin-left: 10px;
}

.serverIndexItemButton,
.serverIndexSystemButton {
    margin-bottom: 8px;
    height: 48px;
    width: 48px;
    background: #36393f;
    transition: .15s ease-out,color .15s ease-out;
    border-radius: 25px;
    text-align: center;
    position: relative;
}

.serverIndexItemButton:hover,
.serverIndexSystemButton:hover,
.selectedServer,
.selectedSystem {
    cursor: pointer;
    border-radius: 15px;
}

.serverIndexItemButton:hover,
.selectedServer {
    background-color: var(--logo-primary);
}
.serverIndexSystemButton:hover,
.selectedSystem {
    background-color: #43b581;
}

.serverIndexSystemButton:hover .addServerButtonText,
.selectedSystem .addServerButtonText{
    color: white;
}

.addServerButtonText {
    position: absolute;
    left: 14px;
    bottom: 4px;
    font-weight: 150;
    font-size: 34px;
    color: #43b581;
}

.addServerButtonText:hover {
    cursor: pointer;
}

.menuSeparator {
    min-height: 2px;
    width: 32px;
    border-radius: 1px;
    background: #36393f;
    opacity: 0.6;
    margin-left: 19px;
    margin-bottom: 8px;
}

.racketLogoIcon {
    color: #dcddde;
}

.serverNameHeader {
    display: flex;
    align-items: center;
    min-height: 48px;
    width: 100%;
    padding: 0px 16px;
    font-size: 24px;
    font-weight: bold;
    color: white;
    box-shadow: var(--elevation-low);
}

.updateButton,
.deleteButton {
    width: 70%;
    position: absolute;
    right: 0;
}

.updateButton {
    background-color: var(--button-secondary);
    bottom: 80px;
}

.deleteButton {
    background: rgb(65, 65, 65);
    bottom: 30px;
    right: 40px;
}

.updateButton:hover {
    background-color: var(--button-secondary-hover);
}

.deleteButton:hover {
    background: rgb(32, 32, 32);
}

